$Id: NEWS,v 1.247 2002-10-09 16:55:09 castaglia Exp $

CVS
---------------------------------
- Bug 1757 - non-ANSI Syntax in netio.c
- Bug 1735 - Proftpd 1.2.6 compiled on FreeBSD 4.6.2 exits on signal 11
- Bug 1759 - ftpwho shows much more connections than really is.  This bug
             only occurred for those daemons running in inetd mode.
- Bug 1769 - Lack of supplemental groups can cause segfault.  This bug is
             a result of the fix for Bug 1666.

1.2.7rc1 - Released 2002-10-01
---------------------------------
- Bug 1649 - setproctitle() prepends and appends process name
- Bug 1666 - Auth modules can return duplicate supplemental groups
- Bug 1654 - Add DESTDIR in Makefile
- Bug 1682 - Broken SyslogFacility requires custom syslog code
- Bug 1076 - Toggle parsing of .ftpaccess files with a AllowOverride
- Bug 1724 - AuthPAM off does not work beginning 1.2.5
- Bug 1593 - mod_sql doesn't cache failed uid lookups
- Bug 1719 - Add RFC2228 stuff to distribution
- Bug 1663 - Add SITE CHGRP command
- Bug 1725 - disconnect when specify multiple ranges on Allow
- Bug 1253 - No ability to configure address for main server
- Bug 1432 - Pedantic handling of leading whitespace in FTP commands
- Bug 1652 - Add connection-rate limiting mechanism
- Bug 1662 - Define _GNU_SOURCE
- Bug 1486 - mod_ls is extremly slow
- Bug 1669 - Filename meta (%f) not correctly expanded for some commands
             in WRITE logging class
- Bug 1065 - New directives to limit file size on upload and download
- Bug 1658 - Separate session/daemon resource limit settings
- Bug 1436 - Feature Enhancement: Timeouts on a <Virtualhost> basis
- Bug 1737 - Enhance file hiding via regular expressions
- Bug 1736 - RETR does not handle an inappropriate REST
- Added NetIO API
- Bug 1726 - Cygwin's Makefile inconsistency
- Bug 1713 - Scoreboard changes
- Bug 1395 - Check return values in PRIVS calls
- Bug 1732 - No checking for NULL at inet_ascii and pr_fnmatch